syntax = "proto3";

package com.linbit.drbdmanage.proto.internal;

// Remote debug command
message MsgDebugCommand
{
    // Command line for the debug console
    string  cmd_line    = 1;
}