syntax = "proto3";

package com.linbit.drbdmanage.proto.internal;

// Debug command reply
message MsgDebugReply
{
    // Debug command standard output
    repeated string debug_out   = 1;

    // Debug command error output
    repeated string debug_err   = 2;
}